webkit2gtk (2.10.8-1) UNRELEASED; urgency=medium

  * New upstream release. This fixes CVE-2016-1726 (Closes: #802380).
  * debian/rules:
    + The list of architectures in which the debug packages are causing
      problems continues to grow, so let's try the opposite approach: we
      build by default using -g1 except in the cases where we know that
      -g works fine (amd64, ppc64, ppc64el).
  * debian/patches/fix-ftbfs-m68k.patch:
    + Enclose the changes to the compile assertions inside an #ifdef block
      so they only apply to m68k.
  * debian/patches/fix-ftbfs-alpha.patch:
    + Fix FTBFS in alpha (Closes: #815124).
  * debian/patches/fix-ftbfs-sparc64.patch:
    + Add patch metadata.

 -- Alberto Garcia <berto@igalia.com>  Fri, 29 Jan 2016 09:09:48 +0200

webkit2gtk (2.10.6-1) unstable; urgency=medium

  * New upstream release.

 -- Alberto Garcia <berto@igalia.com>  Wed, 27 Jan 2016 16:48:08 +0200

webkit2gtk (2.10.5-1) unstable; urgency=high

  * New upstream release. Fixes CVE-2015-7096 and CVE-2015-7098.
    This release doesn't contain any non-DFSG files in the original
    tarball, so we can ship it as-is and remove the +dfsg suffix from the
    Debian version.
    + debian/watch:
      - Remove the 'dversionmangle' option.
    + debian/rules:
      - Remove the get-orig-source target.
      - Don't generate (and clean) jquery.min.js.
    + debian/control:
      - Remove build dependency on slimit.
    + debian/jquery-1.9.1.js:
      - Remove.
  * debian/patches/fix-ftbfs-sparc64.patch:
    + Fix FTBFS on sparc64 (Closes: #806816).
  * debian/rules:
    + Don't pass -DENABLE_YARR_JIT=0, passing -DENABLE_JIT=OFF already
      takes care of that.
    + Remove EXTRA_DH_ARGUMENTS, this is no longer being used.
  * debian/watch:
    + Only scan releases from the stable branches.
  * Migrate to automatic -dbgsym packages:
    + debian/control:
      - Remove the entries for libjavascriptcoregtk-4.0-18-dbg and
        libwebkit2gtk-4.0-37-dbg.