@@ -7,7 +7,7 @@ Uploaders: Gustavo Noronha Silva <kov@debian.org>,
            Alberto Garcia <berto@igalia.com>
 Build-Depends: gawk,
                cmake,
-               debhelper (>= 9.20151219),
+               debhelper (>= 9),
                libglib2.0-dev (>= 2.36.0),
                libgtk2.0-dev (>= 2.24.10),
                libgtk-3-dev (>= 3.10.0),
