@@ -8,6 +8,8 @@ CPPFLAGS = $(shell dpkg-buildflags --get CPPFLAGS) -Wall
 CFLAGS = $(shell dpkg-buildflags --get CFLAGS)
 LDFLAGS = $(shell dpkg-buildflags --get LDFLAGS) -Wl,--as-needed
 
+DEBHELPER_VERSION = $(shell dpkg-query -W -f='$${source:Version}' debhelper)
+
 EXTRA_CMAKE_ARGUMENTS =
 
 # Sacrifice speed in order to make it more likely resource limits
@@ -71,8 +73,10 @@ override_dh_auto_configure:
 	   $(EXTRA_CMAKE_ARGUMENTS)
 
 override_dh_strip:
-	dh_strip -plibwebkit2gtk-4.0-37 --ddeb-migration='libwebkit2gtk-4.0-37-dbg (<< 2.10.5-1~)'
-	dh_strip -plibjavascriptcoregtk-4.0-18 --ddeb-migration='libjavascriptcoregtk-4.0-18-dbg (<< 2.10.5-1~)'
+	if dpkg --compare-versions $(DEBHELPER_VERSION) ge 9.20151219; then \
+		dh_strip -plibwebkit2gtk-4.0-37 --ddeb-migration='libwebkit2gtk-4.0-37-dbg (<< 2.10.5-1~)' ; \
+		dh_strip -plibjavascriptcoregtk-4.0-18 --ddeb-migration='libjavascriptcoregtk-4.0-18-dbg (<< 2.10.5-1~)' ; \
+	fi
 	dh_strip
 
 override_dh_makeshlibs:
